GNOME Bugzilla – Bug 691362
get_pango_base_direction returns wrong enumeration type
Last modified: 2013-03-12 10:36:25 UTC
Date: Tue, 8 Jan 2013 16:52:36 +0100 Subject: [PATCH] gtkhtml/htmltext.c: Return correct enum type `PangoDirection` in `get_pango_base_direction` $ apt-get source libgtkhtml-4.0-0 $ cd gtkhtml4.0-4.6.0 $ clang --version Debian clang version 3.2-9 (tags/RELEASE_32/final) (based on LLVM 3.2) Target: i386-pc-linux-gnu Thread model: posix $ CC=clang ./configure […] CC htmltext.lo htmltext.c:1396:11: warning: implicit conversion from enumeration type 'HTMLDirection' to different enumeration type 'PangoDirection' [-Wenum-conversion] return HTML_DIRECTION_LTR; ~~~~~~ ^~~~~~~~~~~~~~~~~~ 1 warning generated. This error is present since the original commit/merge. commit 3f320b90e0e2bf6b688072d8a8baacdd22ca4691 Author: Radek Doulik <rodo@ximian.com> Date: Tue Jan 4 12:47:33 2005 +0000 merge from RTL branch $ git tag --contains 3f320b90 GNOME_2_16_BRANCHPOINT GTKHTML3_27_3 GTKHTML3_31_5 GTKHTML_2_23_4 GTKHTML_2_29_91 GTKHTML_3_10_0 --- gtkhtml/htmltext.c | 2 +- 1 file changed, 1 insertion(+), 1 deletion(-)
Created attachment 233017 [details] [review] [PATCH] Bug #691362 – gtkhtml/htmltext.c: Return correct enum type `PangoDirection` in `get_pango_base_direction` Please do not strip the commit message when applying.
I'm not sure for what that long commit message is good, when it fixes one simple unfortunate typo in the code, but I'm not going to argue about that. Created commit 8f3dfc0 in gtkhtml master (4.7.92+) Created commit 9ed83f7 in gtkhtml gnome-3-6 (4.6.5+)