Bug #691362 – gtkhtml/htmltext.c: Return correct enum type `PangoDirection` in `get_pango_base_direction`

$ apt-get source libgtkhtml-4.0-0 # with experimental sources
        $ cd gtkhtml4.0-4.6.0
        $ clang --version
        Debian clang version 3.2-9 (tags/RELEASE_32/final) (based on LLVM 3.2)
        Target: i386-pc-linux-gnu
        Thread model: posix
        $ CC=clang ./configure
        […]
          CC     htmltext.lo
        htmltext.c:1396:11: warning: implicit conversion from enumeration type 'HTMLDirection' to different enumeration type 'PangoDirection'
              [-Wenum-conversion]
                                return HTML_DIRECTION_LTR;
                                ~~~~~~ ^~~~~~~~~~~~~~~~~~
        1 warning generated.

This error is present since the original commit/merge.

        commit 3f320b90e0e2bf6b688072d8a8baacdd22ca4691
        Author: Radek Doulik <rodo@ximian.com>
        Date:   Tue Jan 4 12:47:33 2005 +0000

            merge from RTL branch

        $ git tag --contains 3f320b90
        GNOME_2_16_BRANCHPOINT
        GTKHTML3_27_3
        GTKHTML3_31_5
        GTKHTML_2_23_4
        GTKHTML_2_29_91
        GTKHTML_3_10_0

Bugzilla: https://bugzilla.gnome.org/show_bug.cgi?id=691362